backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend 
    spec:
      containers:
      - name: backend-container
        image: ghcr.io/expruc/kubernetes-graduation-drill/k8s-final-drill:backend
        ports:
        - containerPort: 8080
