frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend 
    spec:
      containers:
      - name: frontend-container
        image: ghcr.io/expruc/kubernetes-gradutaion-drill/k8s-final-drill:frontend
        ports:
        - containerPort: 80
