service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend-service
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      NodePort: 30000
